update config example

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,3 @@
 [body]
-text: Su contraseña de la VPN es {} y su nombre es {}
-subject: Contraseña VPN
+text: Hola {}!!! En el amigo invisible de la empresa te ha tocado {}. Comprale algo bonito.
+subject: Amigo invisible
