--- a/config_secret-example.ini
+++ b/config_secret-example.ini
@@ -1,4 +1,6 @@
 [Office-365-Credentials]
 
-email: nombre.apellido@bosonit.com
+email: nombre.apellido@dominio.com
 password: LaComidaDeMiGatoHueleAComidaDeGato
+server:smtp.office365.com
+port: 587
